<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_channels">

    <fragment
        android:id="@+id/nav_firstStart"
        android:name="net.sharksystem.ui.firstLaunch.FirstStartFragment"
        android:label="Shark"
        tools:layout="@layout/fragment_first_start" />

    <fragment
        android:id="@+id/nav_channels"
        android:name="net.sharksystem.ui.channels.ChannelListFragment"
        android:label="@string/menu_channels"
        tools:layout="@layout/fragment_channel_list" />

    <fragment
        android:id="@+id/nav_add_channel"
        android:name="net.sharksystem.ui.channels.AddChannelFragment"
        android:label="@string/menu_add_channel"
        tools:layout="@layout/fragment_add_channel" />

    <fragment
        android:id="@+id/nav_channel_view"
        android:name="net.sharksystem.ui.channels.massage.ChannelViewFragment"
        android:label="@string/menu_channel"
        tools:layout="@layout/fragment_channel_view" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="net.sharksystem.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="net.sharksystem.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_newPeer"
        android:name="net.sharksystem.ui.newPeer.NewPeerFragment"
        android:label="@string/menu_newPeer"
        tools:layout="@layout/fragment_new_peer" />

    <fragment
        android:id="@+id/nav_radar"
        android:name="net.sharksystem.ui.radar.RadarFragment"
        android:label="@string/menu_radar"
        tools:layout="@layout/fragment_radar" />

    <fragment
        android:id="@+id/nav_network"
        android:name="net.sharksystem.ui.network.NetworkFragment"
        android:label="@string/menu_network"
        tools:layout="@layout/fragment_network" />


</navigation>