<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/makanMenuAddOpenButton"
        android:checkable="true"
        android:title="@string/makanMenuAddOpenButtonText"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/makanMenuAddClosedButton"
        android:checkable="true"
        android:title="@string/makanMenuAddClosedButtonText"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/makanMenuRemoveAllButton"
        android:checkable="true"
        android:title="@string/makanMenuRemoveAllButtonText"
        app:showAsAction="always|withText"
        />
</menu>