<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/personAddExplanationTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeGoodReadable"
        android:textStyle="bold"
        android:text="@string/personAddExplanationText"
        />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onContinueClick"
        android:text="@string/continueButtonText"
        />

    <Button
        android:id="@+id/gotoRadarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGotoRadarClick"
        android:text="@string/gotoRadarButtonText"
        />

    <Button
        android:id="@+id/gotoNetworksSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGotoNetworksSettingsClick"
        android:text="@string/gotoNetworksSettingsButtonText"
        />

    <Button
        android:id="@+id/abortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAbortClick"
        android:text="@string/abort"
        />
</LinearLayout>