<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/credentialExplainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_credential_credential_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credentialSubjectID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/send_credential_peer_id_title" />

        <TextView
            android:id="@+id/credentialSubjectIDValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_set_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credentialSubjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/send_credentials_peer_name_title" />

        <TextView
            android:id="@+id/credentialSubjectNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_set_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credentialValidSince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/send_credentials_valid_since_title" />

        <TextView
            android:id="@+id/credentialValidSinceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_set_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credentialRandomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/send_credentials_random_number_title" />

        <TextView
            android:id="@+id/credentialRandomNumberValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_set_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credentialHashPublicKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/send_credentials_key_hash_title" />

        <TextView
            android:id="@+id/credentialHashPublicKeyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_set_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credentialExtraDataKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/send_credentials_extra_data_title" />

        <TextView
            android:id="@+id/credentialExtraDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_set_" />

    </LinearLayout>

    <Button
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="_set" />


</LinearLayout>