<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/fragment_hub_view_host_name_text"
        android:text="@string/hub_view_host_name_title"
        android:layout_gravity="left|top" />

    <EditText
        android:id="@+id/fragment_hub_view_host_name_input"
        android:inputType="text"
        android:text="hostname"
        android:layout_gravity="left|top"
        />

    <TextView
        android:id="@+id/fragment_hub_view_port_text"
        android:text="@string/hub_view_port_title"
        android:layout_gravity="left|top" />

    <EditText
        android:id="@+id/fragment_hub_view_port_input"
        android:inputType="numberDecimal"
        android:layout_gravity="left|top" />

    <TextView
        android:id="@+id/fragment_hub_view_multi_channel_text"
        android:text="@string/hub_view_multi_channel_title"
        android:layout_gravity="left|top" />

    <ToggleButton
        android:id="@+id/fragment_hub_view_multi_channel_button"
        android:text="on | off"
        android:layout_gravity="left|top" />

    <Button
        android:id="@+id/fragment_hub_view_save_button"
        android:text="Save"
        android:onClick="onClick"
        android:layout_gravity="left|top"
        />

    <Button
        android:id="@+id/deleteButton"
        android:text="@string/global_delete"
        android:onClick="onClick"
        android:layout_gravity="left|top"
        />

    <Button
        android:id="@+id/fragment_receive_credentials_abort_button"
        android:text="Abort"
        android:layout_gravity="left|top"
        android:onClick="onAbortClick"
        />

    <Button
        android:id="@+id/fragment_hub_view_default_values_button"
        android:text="Set Default"
        android:layout_gravity="left|top"
        android:onClick="onDefaultClick"
        />
</GridLayout>
